# ws_io

./: CMakeLists.txt  README.adoc  index.html
.drone/: drone.bat  drone.sh
.github/workflows/: ci.yml
doc/: antora.yml  generate-files.mjs  local-playbook.yml  mrdocs.yml
doc/modules/ROOT/: nav.adoc
doc/modules/ROOT/pages/: index.adoc
example/: CMakeLists.txt  Jamfile
example/server/: CMakeLists.txt  Jamfile  main.cpp
include/boost/: ws_io.hpp
include/boost/ws_io/: error.hpp  stream.hpp
include/boost/ws_io/detail/: config.hpp
include/boost/ws_io/impl/: error.hpp
meta/: explicit-failures-markup.xml  libraries.json
src/: error.cpp
test/: CMakeLists.txt  Jamfile
test/cmake_test/: CMakeLists.txt  main.cpp
test/unit/: CMakeLists.txt  Jamfile  error.cpp
